--- a/researchWebsite/package.json
+++ b/researchWebsite/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-mapbox-gl": "^5.1.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "serpapi": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
