--- a/researchWebsite/package.json
+++ b/researchWebsite/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@types/mapbox-gl": "^3.1.0",
+    "csv-parser": "^3.0.0",
+    "fs": "^0.0.1-security",
     "mapbox-gl": "^3.2.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-mapbox-gl": "^5.1.1",
@@ -19,6 +22,7 @@
     "serpapi": "^2.1.0"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
