--- a/researchWebsite/package.json
+++ b/researchWebsite/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/mapbox-gl": "^3.1.0",
+    "@types/react-icons": "^3.0.0",
     "csv-parser": "^3.0.0",
     "fs": "^0.0.1-security",
     "mapbox-gl": "^3.2.0",
