--- a/researchWebsite/package.json
+++ b/researchWebsite/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@types/mapbox-gl": "^3.1.0",
     "@types/react-icons": "^3.0.0",
+    "chart.js": "^4.4.2",
     "csv-parser": "^3.0.0",
     "fs": "^0.0.1-security",
     "mapbox-gl": "^3.2.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-mapbox-gl": "^5.1.1",
     "react-router-dom": "^6.22.3",
