--- a/researchWebsite/package.json
+++ b/researchWebsite/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/mapbox-gl": "^3.1.0",
     "@types/react-icons": "^3.0.0",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "csv-parser": "^3.0.0",
     "fs": "^0.0.1-security",
