--- a/researchWebsite/package.json
+++ b/researchWebsite/package.json
@@ -20,14 +20,17 @@
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-mapbox-gl": "^5.1.1",
     "react-router-dom": "^6.22.3",
     "serpapi": "^2.1.0"
   },
   "devDependencies": {
+    "@types/mapbox__mapbox-gl-draw": "^1.4.6",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.64",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
